<resources>
    <string name="app_name">MapLocalizeAndMove</string>
    <string name="request_permission">Request access to read and write memory.</string>
    <string name="necessary_permission">Necessary permissions</string>
    <string name="permission_rationale">Without this permission, this application may not work properly.Open the application Settings screen to modify application permissions.</string>
    <string name="title_create_map">Create Map</string>
    <string name="title_load_map">Load Map</string>
    <string name="title_navigation">Navigation</string>
    <string name="back_home">Back Home</string>
    <string name="start_map">Start LocalizeAndMap</string>
    <string name="continue_map">Now push me to continue mapping, click the finish button to finish</string>
    <string name="restart_map">Restart LocalizeAndMap</string>
    <string name="finish_mapping">Finish Mapping</string>
    <string name="enter_map_name">Please enter the map name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="robot_name">Robot Name</string>
    <string name="robot_password">Robot Password</string>
    <string name="set_robot_info">Set Robot Info</string>
    <string name="default_robot_name">nao</string>
    <string name="default_robot_password">nao</string>
    <string name="enter_frame_name">Please enter frame name</string>
    <string name="add_frame">Add Attached Frame</string>
    <string name="backup_frames">Backup Frames</string>
    <string name="show_map_list">Show Map List</string>
    <string name="load_selected_map">Load Selected Map</string>
    <string name="frame_name_already_exists">Frame name already exists,please enter again!</string>
    <string name="say_start_map">I will map my environment. Please be sure that my hatch is closed and that you are at least 3 meters away from me while I am scanning the place.</string>
    <string name="no_maps_locally">No maps are stored locally</string>
    <string name="no_frames_locally">This map has no saved frames. Please recreate it</string>
    <string name="select_map">Please select map</string>
    <string name="load_maps_failed">Failed to load map</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="read_map_data_failed">Failed to read map data</string>
    <string name="load_map_image_failed">Failed to load map image</string>
    <string name="save_image_failed">Failed to save map image.</string>
    <string name="obtain_image_failed">Failed to obtain map image.</string>
    <string name="obtain_image_successful">Map image obtained successfully.</string>
    <string name="reenter_robot_info">Robot name and password cannot be empty, please enter again!</string>
    <string name="stop_navigation">Start Navigation</string>
    <string name="continue_navigation">Continue Navigation</string>
    <string name="pause_navigation">Pause Navigation</string>
</resources>
