<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robot_name" />

    <EditText
        android:id="@+id/robot_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_robot_name">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robot_password" />

    <EditText
        android:id="@+id/robot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_robot_password" />
</LinearLayout>
